# Geometry

./: .gitmodules  CMakeLists.txt  README.md
geometry/: CMakeLists.txt
geometry/include/transform/: ROS_transform_tree_visualizer.hpp  transform.hpp  transform_tree_visualizer.hpp
geometry/src/transform/: ROS_transform_tree_visualizer.cpp
geometry/tests/: CMakeLists.txt  test_ROS_transform_tree_visualizer.cpp
include/conversions/: conversions.hpp
include/meshes/: mesh.hpp  stl_parser.hpp
include/primitives/: point.hpp
include/transform/: static_transform_tree.hpp  symbolic_transform.hpp  transform.hpp  utilities.hpp
src/conversions/: conversions.cpp
src/meshes/: mesh.cpp  stl_parser.cpp
src/primitives/: point.cpp
src/transform/: static_transform_tree.cpp  symbolic_transform.cpp  transform.cpp  utilities.cpp
tests/: CMakeLists.txt  test_symbolic_transform.cpp  test_utilities.cpp
